--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "core-js": "3.4.3",
+    "vue": "2.6.10"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-typescript": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "@vue/eslint-config-typescript": "^4.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.0.0",
-    "lint-staged": "^9.4.3",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.19.1",
-    "sass-loader": "^8.0.0",
-    "typescript": "~3.5.3",
-    "vue-template-compiler": "^2.6.10"
+    "@vue/cli-plugin-babel": "4.1.0",
+    "@vue/cli-plugin-eslint": "4.1.0",
+    "@vue/cli-plugin-typescript": "4.1.0",
+    "@vue/cli-service": "4.1.0",
+    "@vue/eslint-config-prettier": "5.0.0",
+    "@vue/eslint-config-typescript": "4.0.0",
+    "eslint": "5.16.0",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-vue": "5.0.0",
+    "lint-staged": "9.4.3",
+    "node-sass": "4.12.0",
+    "prettier": "1.19.1",
+    "sass-loader": "8.0.0",
+    "typescript": "3.7.3",
+    "vue-template-compiler": "2.6.10"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
