--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "vue-template-compiler": "2.6.10"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "yarn lint-staged"
   },
   "lint-staged": {
     "*.{js,vue,ts}": [
