--- a/package.json
+++ b/package.json
@@ -8,13 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/apollo-composable": "4.0.0-alpha.3",
     "@vue/composition-api": "0.3.4",
+    "apollo-cache-inmemory": "1.6.3",
+    "apollo-client": "2.6.4",
+    "apollo-link": "1.2.13",
+    "apollo-link-http": "1.5.16",
     "core-js": "3.4.3",
+    "graphql": "14.5.8",
+    "graphql-tag": "2.10.1",
     "vue": "2.6.10"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.7.4",
     "@babel/plugin-proposal-optional-chaining": "7.7.5",
+    "@graphql-codegen/add": "1.9.1",
+    "@graphql-codegen/cli": "1.9.1",
+    "@graphql-codegen/fragment-matcher": "1.9.1",
+    "@graphql-codegen/typescript": "1.9.1",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.9.1",
+    "@graphql-codegen/typescript-operations": "1.9.1",
     "@vue/cli-plugin-babel": "4.1.0",
     "@vue/cli-plugin-eslint": "4.1.0",
     "@vue/cli-plugin-typescript": "4.1.0",
