--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lint-staged": "9.4.3",
     "node-sass": "4.12.0",
     "prettier": "1.19.1",
+    "raw-loader": "4.0.0",
     "sass-loader": "8.0.0",
     "typescript": "3.7.3",
     "vue-template-compiler": "2.6.10"
