--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "6.7.2",
     "eslint-plugin-prettier": "3.1.1",
     "eslint-plugin-vue": "6.0.1",
+    "gh-pages": "2.1.1",
     "lint-staged": "9.5.0",
     "node-sass": "4.13.0",
     "prettier": "1.19.1",
