--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,10 @@ jobs:
       - run:
           name: Build
           command: yarn run build
+      - persist_to_workspace:
+          root: ~/app
+          paths:
+            - dist
 
   lint:
     executor: node
