--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "lint-staged": {
     "*.{js,vue,ts}": [
+      "prettier --write",
       "vue-cli-service lint",
       "git add"
     ]
