--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vue/composition-api": "0.3.4",
+    "clipboard-copy": "3.1.0",
     "core-js": "3.5.0",
     "graphql": "14.5.8",
     "vue": "2.6.11"
