--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "clipboard-copy": "3.1.0",
     "core-js": "3.5.0",
     "graphql": "14.5.8",
-    "vue": "2.6.11"
+    "vue": "2.6.11",
+    "vue-google-adsense": "1.8.0",
+    "vue-script2": "2.1.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.7.4",
