--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     ]
   },
   "dependencies": {
-    "@vue/composition-api": "0.3.4",
+    "@vue/composition-api": "0.5.0",
     "clipboard-copy": "3.1.0",
     "core-js": "3.6.5",
     "graphql": "14.5.8",
@@ -28,21 +28,23 @@
     "vue-script2": "2.1.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "7.7.5",
     "@graphql-codegen/add": "1.9.1",
     "@graphql-codegen/cli": "1.9.1",
     "@graphql-codegen/fragment-matcher": "1.9.1",
     "@graphql-codegen/typescript": "1.9.1",
     "@graphql-codegen/typescript-graphql-files-modules": "1.9.1",
     "@graphql-codegen/typescript-operations": "1.9.1",
-    "@vue/cli-plugin-babel": "4.1.1",
-    "@vue/cli-plugin-eslint": "4.1.1",
-    "@vue/cli-plugin-typescript": "4.1.1",
-    "@vue/cli-service": "4.1.1",
+    "@typescript-eslint/eslint-plugin": "3.1.0",
+    "@typescript-eslint/parser": "3.1.0",
+    "@vue/cli-plugin-babel": "4.4.1",
+    "@vue/cli-plugin-eslint": "4.4.1",
+    "@vue/cli-plugin-typescript": "4.4.1",
+    "@vue/cli-service": "4.4.1",
     "@vue/eslint-config-prettier": "6.0.0",
-    "@vue/eslint-config-typescript": "5.0.1",
+    "@vue/eslint-config-typescript": "5.0.2",
     "eslint": "7.2.0",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-vue": "6.2.2",
     "gh-pages": "3.0.0",
     "husky": "4.2.5",
     "lint-staged": "10.2.9",
