--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
-.DS_Store
-node_modules
-dist
-schema.graphql
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
+## Project
 .idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.env
+!.gitkeep
+test-results
+
+postgres
+sqlite
+dist
+
+# Yarn
+node_modules
+.yarn/*
+!.yarn/cache
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+
+# Logs
+logs
+*.log
