update prettier and its config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,10 @@ on:
     branches:
       - master
     paths-ignore:
-      - '**/*.md'
-      - '.gitignore'
-      - '.github/**'
-      - '!.github/workflows/*.yml'
+      - "**/*.md"
+      - ".gitignore"
+      - ".github/**"
+      - "!.github/workflows/*.yml"
   pull_request:
 
 jobs:
