--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
-  "printWidth": 80,
+  "printWidth": 90,
   "semi": false,
-  "singleQuote": true,
   "trailingComma": "all",
-  "bracketSpacing": true
+  "htmlWhitespaceSensitivity": "ignore"
 }
