--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "clipboard-copy": "3.1.0",
+    "fathom-client": "3.0.0",
     "graphql": "15.5.0",
     "vue": "3.0.11",
     "vue-google-adsense": "1.8.1",
