--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "clipboard-copy": "3.1.0",
     "fathom-client": "3.0.0",
     "graphql": "15.5.0",
-    "vue": "3.0.11",
-    "vue-google-adsense": "1.8.1",
-    "vue-script2": "2.1.0"
+    "vue": "3.0.11"
   },
   "devDependencies": {
     "@beequeue/eslint-plugin": "0.2.0",
