go back to real url

--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,6 @@
 overwrite: true
 
-schema: https://siege-b5pz.onrender.com/graphql
+schema: https://siege.stratroulette.com/graphql
 
 documents:
   - src/**/*.graphql
