--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "siege-ui",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^16"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "yarn typecheck && vite build",
+    "dev": "vite",
+    "lint": "eslint src",
+    "serve": "vite preview",
+    "typecheck": "yarn vue-tsc --noEmit"
   },
   "husky": {
     "hooks": {
@@ -14,45 +19,31 @@
   },
   "lint-staged": {
     "*.{js,vue,ts}": [
-      "prettier --write",
-      "vue-cli-service lint --fix"
+      "prettier --write"
     ]
   },
   "dependencies": {
-    "@vue/composition-api": "0.5.0",
     "clipboard-copy": "3.1.0",
-    "core-js": "3.6.5",
-    "graphql": "14.5.8",
-    "vue": "2.6.11",
-    "vue-google-adsense": "1.8.1",
-    "vue-script2": "2.1.0"
+    "fathom-client": "3.0.0",
+    "graphql": "15.5.0",
+    "vue": "3.0.11"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "1.15.1",
-    "@graphql-codegen/cli": "1.15.1",
-    "@graphql-codegen/fragment-matcher": "1.15.1",
-    "@graphql-codegen/typescript": "1.15.1",
-    "@graphql-codegen/typescript-graphql-files-modules": "1.15.1",
-    "@graphql-codegen/typescript-operations": "1.15.1",
-    "@typescript-eslint/eslint-plugin": "3.1.0",
-    "@typescript-eslint/parser": "3.1.0",
-    "@vue/cli-plugin-babel": "4.4.1",
-    "@vue/cli-plugin-eslint": "4.4.1",
-    "@vue/cli-plugin-typescript": "4.4.1",
-    "@vue/cli-service": "4.4.1",
-    "@vue/eslint-config-prettier": "6.0.0",
-    "@vue/eslint-config-typescript": "5.0.2",
-    "eslint": "7.2.0",
-    "eslint-plugin-prettier": "3.1.3",
-    "eslint-plugin-vue": "6.2.2",
-    "gh-pages": "3.0.0",
+    "@beequeue/eslint-plugin": "0.2.0",
+    "@graphql-codegen/add": "2.0.2",
+    "@graphql-codegen/cli": "1.21.5",
+    "@graphql-codegen/typescript": "1.22.1",
+    "@graphql-codegen/typescript-operations": "1.18.0",
+    "@vitejs/plugin-vue": "1.2.3",
+    "@vue/compiler-sfc": "3.0.11",
+    "eslint": "7.27.0",
     "husky": "4.2.5",
-    "lint-staged": "10.2.9",
-    "node-sass": "4.14.1",
-    "prettier": "1.19.1",
-    "raw-loader": "4.0.1",
-    "sass-loader": "8.0.2",
+    "lint-staged": "11.0.0",
+    "prettier": "2.3.0",
+    "sass": "1.34.1",
     "typescript": "3.9.5",
-    "vue-template-compiler": "2.6.11"
+    "vite": "2.3.6",
+    "vite-tsconfig-paths": "3.3.13",
+    "vue-tsc": "0.1.7"
   }
 }
