--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "build": "yarn typecheck && vite build",
     "dev": "vite",
     "lint": "eslint src",
+    "postinstall": "husky install",
     "serve": "vite preview",
     "typecheck": "yarn vue-tsc --noEmit"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,vue,ts}": [
@@ -37,11 +33,11 @@
     "@vitejs/plugin-vue": "1.2.3",
     "@vue/compiler-sfc": "3.0.11",
     "eslint": "7.27.0",
-    "husky": "4.2.5",
+    "husky": "6.0.0",
     "lint-staged": "11.0.0",
     "prettier": "2.3.0",
     "sass": "1.34.1",
-    "typescript": "3.9.5",
+    "typescript": "4.3.2",
     "vite": "2.3.6",
     "vite-tsconfig-paths": "3.3.13",
     "vue-tsc": "0.1.7"
