--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@graphql-codegen/typescript-operations": "1.18.0",
     "@vitejs/plugin-vue": "1.2.3",
     "@vue/compiler-sfc": "3.0.11",
+    "browserslist": "4.16.6",
+    "esbuild-plugin-browserslist": "0.1.0",
     "eslint": "7.27.0",
     "husky": "6.0.0",
     "lint-staged": "11.0.0",
