update renovate config

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,26 +1,32 @@
 {
-  extends: ['config:js-app', 'helpers:disableTypesNodeMajor'],
+  extends: ["config:js-app", "helpers:disableTypesNodeMajor"],
   prConcurrentLimit: 5,
   branchConcurrentLimit: 5,
-  schedule: ['before 11am'],
-  labels: ['dependencies'],
-  postUpdateOptions: ['yarnDedupeHighest'],
+  schedule: ["before 11am"],
+  labels: ["dependencies"],
+  postUpdateOptions: ["yarnDedupeHighest"],
   postUpgradeTasks: {
-    commands: ['yarn eslint --fix'],
-    fileFilters: ['yarn.lock', '**/*.{js,ts,vue}'],
-    executionMode: 'update',
+    commands: ["yarn eslint --fix"],
+    fileFilters: ["yarn.lock", "**/*.{js,ts,vue}"],
+    executionMode: "update",
   },
-  baseBranches: ['master'],
+  baseBranches: ["master"],
   packageRules: [
     {
-      packageNames: ['node'],
-      allowedVersions: '<=16',
-      rangeStrategy: 'replace',
+      packageNames: ["node"],
+      allowedVersions: "<=16",
+      rangeStrategy: "replace",
     },
     {
-      groupName: '`@types` package patches',
-      matchPackagePrefixes: ['@types/'],
+      groupName: "`@types` package patches",
+      matchPackagePrefixes: ["@types/"],
       patch: true,
+      automerge: true,
+    },
+    {
+      groupName: "Linting",
+      matchPackageNames: ["lint"],
+      automerge: true,
     },
   ],
 }
