--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -2,7 +2,6 @@
   extends: ["config:js-app", "helpers:disableTypesNodeMajor"],
   prConcurrentLimit: 5,
   branchConcurrentLimit: 5,
-  schedule: ["before 11am"],
   labels: ["dependencies"],
   postUpdateOptions: ["yarnDedupeHighest"],
   postUpgradeTasks: {
@@ -25,7 +24,7 @@
     },
     {
       groupName: "Linting",
-      matchPackageNames: ["lint"],
+      matchPackagePatterns: ["lint"],
       automerge: true,
     },
   ],
