--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,9 @@
-name: CI
+name: ci
+
 on:
   push:
     branches:
-      - master
-    paths-ignore:
-      - "**/*.md"
-      - ".gitignore"
-      - ".github/**"
-      - "!.github/workflows/*.yml"
+      - main
   pull_request:
 
 jobs:
@@ -15,50 +11,79 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - uses: actions/cache@v2
+      - uses: BeeeQueue/setup-node@corepack
         with:
-          path: ${{ steps.yarn-cache-dir.outputs.dir }}
-          key: yarn-c1-${{ hashFiles('**/yarn.lock') }}
+          node-version: 18
+          corepack: true
+
+      - name: find pnpm cache path
+        id: cache
+        run: echo "::set-output name=path::$(pnpm store path)"
+
+      - uses: actions/cache@v3
+        with:
+          path: ${{ steps.cache.outputs.path }}
+          key: v1-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            yarn-c1-
-
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16
+            v1-pnpm-
 
       - name: Install dependencies
-        run: yarn install --immutable
+        run: pnpm install --frozen-lockfile
 
-      - run: yarn lint
+      - run: pnpm lint --format compact
 
   typecheck:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - uses: actions/cache@v2
+      - uses: BeeeQueue/setup-node@corepack
         with:
-          path: ${{ steps.yarn-cache-dir.outputs.dir }}
-          key: yarn-c1-${{ hashFiles('**/yarn.lock') }}
+          node-version: 18
+          corepack: true
+
+      - name: find pnpm cache path
+        id: cache
+        run: echo "::set-output name=path::$(pnpm store path)"
+
+      - uses: actions/cache@v3
+        with:
+          path: ${{ steps.cache.outputs.path }}
+          key: v1-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            yarn-c1-
-
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16
+            v1-pnpm-
 
       - name: Install dependencies
-        run: yarn install --immutable
+        run: pnpm install --frozen-lockfile
 
-      - run: yarn typecheck
+      - run: pnpm typecheck
+
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: BeeeQueue/setup-node@corepack
+        with:
+          node-version: 18
+          corepack: true
+
+      - name: find pnpm cache path
+        id: cache
+        run: echo "::set-output name=path::$(pnpm store path)"
+
+      - uses: actions/cache@v3
+        with:
+          path: ${{ steps.cache.outputs.path }}
+          key: v1-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            v1-pnpm-
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - run: pnpm build
