--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "siege-ui",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@7.11.0",
   "engines": {
-    "node": "^16"
+    "node": "^18"
   },
   "scripts": {
-    "build": "yarn typecheck && vite build",
+    "build": "pnpm typecheck && vite build",
     "dev": "vite",
     "lint": "eslint src",
     "postinstall": "husky install",
     "serve": "vite preview",
-    "typecheck": "yarn vue-tsc --noEmit"
+    "typecheck": "pnpm vue-tsc --noEmit"
   },
   "lint-staged": {
     "*.{js,vue,ts,html,json,json5,graphql}": [
