--- a/package.json
+++ b/package.json
@@ -31,18 +31,23 @@
     "@graphql-codegen/cli": "2.2.0",
     "@graphql-codegen/typescript": "2.2.2",
     "@graphql-codegen/typescript-operations": "2.1.5",
-    "@vitejs/plugin-vue": "1.9.3",
+    "@vitejs/plugin-vue": "3.1.0",
     "@vue/compiler-sfc": "3.2.19",
-    "browserslist": "4.17.1",
-    "esbuild-plugin-browserslist": "0.2.1",
+    "browserslist": "4.21.4",
+    "esbuild-plugin-browserslist": "0.5.0",
     "eslint": "7.32.0",
     "husky": "7.0.2",
     "lint-staged": "11.2.0",
     "prettier": "2.4.1",
     "sass": "1.42.1",
     "typescript": "4.4.3",
-    "vite": "2.6.3",
-    "vite-tsconfig-paths": "3.3.14",
-    "vue-tsc": "0.3.0"
+    "vite": "3.1.1",
+    "vite-tsconfig-paths": "3.5.0",
+    "vue-tsc": "0.40.13"
+  },
+  "pnpm": {
+    "ignoreMissing": [
+      "esbuild"
+    ]
   }
 }
