--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,7 @@ jobs:
           path: dist
 
   deploy:
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
 
     environment:
