--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "siege-ui",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@7.11.0",
   "engines": {
-    "node": "^16"
+    "node": "^18"
   },
   "scripts": {
-    "build": "yarn typecheck && vite build",
+    "build": "pnpm typecheck && vite build",
     "dev": "vite",
     "lint": "eslint src",
     "postinstall": "husky install",
     "serve": "vite preview",
-    "typecheck": "yarn vue-tsc --noEmit"
+    "typecheck": "pnpm vue-tsc --noEmit"
   },
   "lint-staged": {
     "*.{js,vue,ts,html,json,json5,graphql}": [
@@ -20,28 +21,37 @@
   },
   "dependencies": {
     "clipboard-copy": "4.0.1",
-    "fathom-client": "3.2.0",
-    "graphql": "15.6.0",
-    "vue": "3.2.19"
+    "fathom-client": "3.5.0",
+    "graphql": "16.6.0",
+    "vue": "3.2.39"
   },
   "devDependencies": {
-    "@beequeue/eslint-plugin": "0.3.0",
-    "@graphql-codegen/add": "3.1.0",
-    "@graphql-codegen/cli": "2.2.0",
-    "@graphql-codegen/typescript": "2.2.2",
-    "@graphql-codegen/typescript-operations": "2.1.5",
-    "@vitejs/plugin-vue": "1.9.3",
-    "@vue/compiler-sfc": "3.2.19",
-    "browserslist": "4.17.1",
-    "esbuild-plugin-browserslist": "0.2.1",
-    "eslint": "7.32.0",
-    "husky": "7.0.2",
-    "lint-staged": "11.2.0",
-    "prettier": "2.4.1",
-    "sass": "1.42.1",
-    "typescript": "4.4.3",
-    "vite": "2.6.3",
-    "vite-tsconfig-paths": "3.3.14",
-    "vue-tsc": "0.3.0"
+    "@beequeue/eslint-plugin": "0.8.0",
+    "@graphql-codegen/add": "3.2.1",
+    "@graphql-codegen/cli": "2.12.0",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-operations": "2.5.3",
+    "@vitejs/plugin-vue": "3.1.0",
+    "@vue/compiler-sfc": "3.2.39",
+    "browserslist": "4.21.4",
+    "esbuild-plugin-browserslist": "0.5.0",
+    "eslint": "8.23.1",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
+    "prettier": "2.7.1",
+    "sass": "1.54.9",
+    "typescript": "4.8.3",
+    "vite": "3.1.1",
+    "vite-tsconfig-paths": "3.5.0",
+    "vue-tsc": "0.40.13"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@types/node",
+        "esbuild",
+        "ts-node"
+      ]
+    }
   }
 }
