--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,14 +91,19 @@ jobs:
 
       - run: pnpm build
 
+      - name: Create tarball
+#        if: github.ref == 'refs/heads/master'
+        run: tar -czf ./dist.tar.gz ./dist
+
       - name: Upload artifact
-        if: github.ref == 'refs/heads/master'
-        uses: actions/upload-pages-artifact@v1
+#        if: github.ref == 'refs/heads/master'
+        uses: actions/upload-artifact@v3
         with:
+          name: dist
           path: dist
 
   deploy:
-    if: github.ref == 'refs/heads/master'
+#    if: github.ref == 'refs/heads/master'
     needs: [build, lint, typecheck]
     runs-on: ubuntu-latest
 
@@ -106,17 +111,17 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     permissions:
-      contents: read
-      pages: write
-      id-token: write
+      contents: write
     concurrency:
       group: deployment
       cancel-in-progress: true
 
     steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
 
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+      - run: tar -xzf ./dist.tar.gz
+
+      - run: ls
+      - run: ls dist
