--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "esbuild-plugin-browserslist": "0.9.1",
     "eslint": "8.51.0",
     "husky": "8.0.3",
-    "lint-staged": "15.0.1",
+    "lint-staged": "15.0.2",
     "prettier": "3.0.3",
     "sass": "1.69.4",
     "typescript": "5.2.2",
-    "vite": "4.5.0",
+    "vite": "5.0.0-beta.11",
     "vite-plugin-webfont-dl": "3.7.6",
     "vite-tsconfig-paths": "4.2.1",
     "vue-tsc": "1.8.19"
