--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "clipboard-copy": "4.0.1",
-    "fathom-client": "3.6.0",
     "graphql": "16.8.1",
     "vue": "3.3.9"
   },
@@ -31,42 +30,44 @@
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/typescript": "4.0.1",
     "@graphql-codegen/typescript-operations": "4.0.1",
-    "@vitejs/plugin-vue": "4.5.0",
+    "@vitejs/plugin-vue": "4.5.1",
     "@vue/compiler-sfc": "3.3.9",
-    "browserslist": "4.22.1",
+    "browserslist": "4.22.2",
     "esbuild-plugin-browserslist": "0.10.0",
-    "eslint": "8.54.0",
+    "eslint": "8.55.0",
     "husky": "8.0.3",
-    "lint-staged": "15.1.0",
+    "lint-staged": "15.2.0",
     "prettier": "3.1.0",
     "sass": "1.69.5",
     "typescript": "5.3.2",
-    "vite": "5.0.3",
+    "vite": "5.0.4",
     "vite-plugin-webfont-dl": "3.9.1",
     "vite-tsconfig-paths": "4.2.1",
-    "vue-tsc": "1.8.22"
+    "vue-tsc": "1.8.24"
   },
   "pnpm": {
-    "peerDependencyRules": {
-      "ignoreMissing": [
-        "@types/node",
-        "esbuild",
-        "ts-node"
-      ]
-    },
     "overrides": {
       "array-includes": "npm:@nolyfill/array-includes@latest",
       "array.prototype.flat": "npm:@nolyfill/array.prototype.flat@latest",
       "array.prototype.flatmap": "npm:@nolyfill/array.prototype.flatmap@latest",
       "array.prototype.tosorted": "npm:@nolyfill/array.prototype.tosorted@latest",
-      "es-iterator-helpers": "npm:@nolyfill/es-iterator-helpers@latest",
-      "has": "npm:@nolyfill/has@latest",
+      "function-bind": "npm:@nolyfill/function-bind@latest",
+      "gopd": "npm:@nolyfill/gopd@latest",
+      "has-property-descriptors": "npm:@nolyfill/has-property-descriptors@latest",
+      "has-proto": "npm:@nolyfill/has-proto@latest",
+      "has-symbols": "npm:@nolyfill/has-symbols@latest",
+      "hasown": "npm:@nolyfill/hasown@latest",
+      "isarray": "npm:@nolyfill/isarray@latest",
+      "jsonify": "npm:@nolyfill/jsonify@latest",
+      "object-keys": "npm:@nolyfill/object-keys@latest",
       "object.assign": "npm:@nolyfill/object.assign@latest",
       "object.entries": "npm:@nolyfill/object.entries@latest",
       "object.fromentries": "npm:@nolyfill/object.fromentries@latest",
       "object.hasown": "npm:@nolyfill/object.hasown@latest",
       "object.values": "npm:@nolyfill/object.values@latest",
-      "string.prototype.matchall": "npm:@nolyfill/string.prototype.matchall@latest"
+      "string.prototype.matchall": "npm:@nolyfill/string.prototype.matchall@latest",
+      "es-iterator-helpers": "npm:@nolyfill/es-iterator-helpers@latest",
+      "has": "npm:@nolyfill/has@latest"
     }
   }
 }
