--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "clipboard-copy": "4.0.1",
     "graphql": "16.8.1",
-    "vue": "3.4.4"
+    "vue": "3.6.0-alpha.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "5.2.1",
@@ -34,7 +34,6 @@
     "@graphql-codegen/typescript": "4.1.6",
     "@graphql-codegen/typescript-operations": "4.6.1",
     "@vitejs/plugin-vue": "6.0.1",
-    "@vue/compiler-sfc": "3.4.4",
     "@vue/language-server": "3.0.6",
     "@vue/tsconfig": "0.8.1",
     "eslint": "9.33.0",
