--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siege-ui",
-  "version": "0.1.0",
+  "type": "module",
   "private": true,
   "packageManager": "pnpm@10.15.0",
   "engines": {
